[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
homepage = "https://mysteryforge.xyz"
repository = "https://github.com/MysteryForge/eth-kit"
exclude = [".github/", ".direnv/"]

[workspace]
members = [
    "bin/execution-probe",
    "bin/beacon-probe",
    "bin/blockspeed",
    "crates/metrics",
    "crates/execution-probe/echo",
    "crates/execution-probe/cmd",
    "crates/blockspeed/echo",
    "crates/blockspeed/cmd",
    "crates/blockspeed/trace",
]
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.dependencies]
execution-probe = { path = "bin/execution-probe" }
beacon-probe = { path = "bin/beacon-probe" }
eth-kit-metrics = { path = "crates/metrics" }
execution-probe-echo = { path = "crates/execution-probe/echo" }
execution-probe-cmd = { path = "crates/execution-probe/cmd" }
beacon-probe-echo = { path = "crates/beacon-probe/echo" }
beacon-probe-cmd = { path = "crates/beacon-probe/cmd" }
blockspeed-echo = { path = "crates/blockspeed/echo" }
blockspeed-cmd = { path = "crates/blockspeed/cmd" }
blockspeed-trace = { path = "crates/blockspeed/trace" }

# misc
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = "4.5.41"
url = "2.5"
metrics = "0.24"
metrics-derive = "0.1"
metrics-exporter-prometheus = "0.17.2"
metrics-process = "2.4.0"
metrics-util = { version = "0.20", default-features = false }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
hyper = "1"
hyper-util = "0.1"
http = "1"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
jsonrpsee = "0.25"
jsonrpsee-types = "0.25"
alloy-rpc-types-eth = "1"
alloy-primitives = "1"
influxdb2 = { version = "0.5", features = ["rustls"], default-features = false }
influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2"
futures-util = "0.3"