[package]
name = "eth-kit-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
http.workspace = true
eyre.workspace = true
tracing.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-process.workspace = true
metrics-util.workspace = true

[features]
default = []