[package]
name = "beacon-probe-cmd"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# tracing
tracing = "0.1"

# cli
clap = { version = "4", features = ["derive", "env"] }

# error handling
eyre = "0.6"

url = "2.5"

[features]
default = []