[package]
name = "beacon-probe-cmd"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
url.workspace = true

[features]
default = []