[package]
name = "beacon-probe-echo"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
eyre.workspace = true
tracing.workspace = true
metrics.workspace = true
eth-kit-metrics.workspace = true

[features]
default = []