[package]
name = "blockspeed-echo"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
metrics.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
eyre.workspace = true

eth-kit-metrics.workspace = true

[features]
default = []