[package]
name = "blockspeed-trace"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
metrics.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrpsee = { workspace = true, features = ["client-core", "http-client", "ws-client"] }
jsonrpsee-types.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
futures-util.workspace = true
influxdb2.workspace = true
influxdb2-structmap.workspace = true
influxdb2-derive.workspace = true
num-traits.workspace = true

eth-kit-metrics.workspace = true

[features]
default = []